--- a/probe/pipe/Cargo.toml
+++ b/probe/pipe/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cmd_lib = "0.12.0"
 env_logger = "0.8.3"
 log = "0.4.14"
 serde_json = "1.0.64"
