--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,8 @@
 {
     "private": true,
+    "browserslist": "defaults",
     "devDependencies": {
+        "@babel/preset-env": "^7.15.6",
         "babel-loader": "^8.2.2",
         "html-webpack-plugin": "^5.3.2",
         "vue": "^2.6.14",
