--- a/ui/package.json
+++ b/ui/package.json
@@ -2,8 +2,10 @@
     "private": true,
     "browserslist": "defaults",
     "devDependencies": {
+        "@babel/core": "^7.15.5",
         "@babel/preset-env": "^7.15.6",
         "babel-loader": "^8.2.2",
+        "css-loader": "^6.2.0",
         "html-webpack-plugin": "^5.3.2",
         "vue": "^2.6.14",
         "vue-loader": "^15.9.8",
