--- a/ui/package.json
+++ b/ui/package.json
@@ -1,9 +1,17 @@
 {
+    "name": "veza-web-ui",
+    "version": "0.0.0",
     "private": true,
     "browserslist": "defaults",
+    "scripts": {
+        "build": "npx webpack",
+        "serve-files": "npx webpack serve",
+        "serve-websocket": "python websocket.py"
+    },
     "devDependencies": {
         "@babel/core": "^7.15.5",
         "@babel/preset-env": "^7.15.6",
+        "@fontsource/inter": "^4.5.0",
         "babel-loader": "^8.2.2",
         "css-loader": "^6.2.0",
         "html-webpack-plugin": "^5.3.2",
@@ -11,6 +19,7 @@
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.14",
         "webpack": "^5.52.1",
-        "webpack-cli": "^4.8.0"
+        "webpack-cli": "^4.8.0",
+        "webpack-dev-server": "^4.2.1"
     }
 }
